--- a/assignmentOne/package.json
+++ b/assignmentOne/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson2examples",
+  "name": "assignmentone",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~50.0.2",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.73.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
